# clubb_release

./: .cproject  .gitattributes  .gitignore  .lfsconfig  .project  AGENTS.md  BUILD.md  CMakeLists.txt  Changes_M2005  Jenkinsfile  License.txt  README  README-Storeretal2014  README-Storeretal2014.md  README.MICRO_M2005  README_Hydromet_PDF_shapes  README_flexiblesampling  README_grid_adapt_paper.md  README_reproduce_prog_mom_flux_paper_results  README_tag_MVCS  README~  Readme.txt  TODO  compile.py  microphysics.F90  msdos_format_test.txt  msg.txt  recreate_storer_simulations.sh  run.20200310_xCOSP2.alpha22.F2010.ne30pg2_r05_oECv3.anvil.csh
clubb_python_api/: .gitignore  CMakeLists.txt  README.md  clubb_f2py.pyf  requirements.txt  run_pytests.sh
clubb_python_api/clubb_python/: __init__.py  _runtime_loader.py  clubb_api.py  prescribe_forcings.py  radiation.py  string_conversion.py
clubb_python_api/f2py_fortran_wrappers/: T_in_K_module_wrapper.F90  adg1_adg2_3d_luhar_pdf_wrapper.F90  advance_clubb_core_module_wrapper.F90  advance_helper_module_wrapper.F90  advance_windm_edsclrm_module_wrapper.F90  advance_wp2_wp3_module_wrapper.F90  advance_xm_wpxp_module_wrapper.F90  advance_xp2_xpyp_module_wrapper.F90  advance_xp3_module_wrapper.F90  bicgstab_solvers_wrapper.F90  calc_pressure_wrapper.F90  calc_roots_wrapper.F90  calendar_wrapper.F90  clip_explicit_wrapper.F90  clubb_loss_driver_wrapper.F90  corr_varnce_module_wrapper.F90  derived_type_storage.F90  diagnose_correlations_module_wrapper.F90  diffusion_wrapper.F90  err_info_type_module_wrapper.F90  error_code_wrapper.F90  file_functions_wrapper.F90  fill_holes_wrapper.F90  grid_class_wrapper.F90  hydrostatic_module_wrapper.F90  interpolation_wrapper.F90  lapack_interfaces_wrapper.F90  lapack_wrap_wrapper.F90  ly93_pdf_wrapper.F90  matrix_operations_wrapper.F90  matrix_solver_wrapper_wrapper.F90  mean_adv_wrapper.F90  mixing_length_wrapper.F90  model_flags_wrapper.F90  mono_flux_limiter_wrapper.F90  nc_ncn_eqns_wrapper.F90  netcdf_stub.F90  new_hybrid_pdf_main_wrapper.F90  new_hybrid_pdf_wrapper.F90  new_pdf_main_wrapper.F90  (+22 more)
clubb_python_api/tests/: conftest.py  test_advance_core_subs.py  test_argument_contract_audit.py  test_call_tree_advance_core.py  test_call_tree_advance_windm_edsclrm.py  test_call_tree_advance_wp2_wp3.py  test_call_tree_advance_xm_wpxp.py  test_call_tree_advance_xp2_xpyp.py  test_call_tree_advance_xp3.py  test_call_tree_bicgstab_solvers.py  test_call_tree_calc_roots.py  test_call_tree_corr_varnce_module.py  test_call_tree_diagnose_correlations_module.py  test_call_tree_error_code.py  test_call_tree_file_functions.py  test_call_tree_index_mapping.py  test_call_tree_interpolation.py  test_call_tree_lapack_interfaces.py  test_call_tree_lapack_wrap.py  test_call_tree_luhar.py  test_call_tree_ly93.py  test_call_tree_matrix_operations.py  test_call_tree_matrix_solver_wrapper.py  test_call_tree_meta.py  test_call_tree_mixing_length.py  test_call_tree_mono_flux.py  test_call_tree_nc_ncn_eqns.py  test_call_tree_new_hybrid_pdf.py  test_call_tree_new_pdf.py  test_call_tree_new_tsdadg.py  test_call_tree_numerical_check.py  test_call_tree_pdf_closure.py  test_call_tree_pdf_closure_driver.py  test_call_tree_pdf_utils.py  test_call_tree_penta_lu_solvers.py  test_call_tree_pos_definite_module.py  test_call_tree_precipitation_fraction.py  test_call_tree_remap.py  test_call_tree_saturation.py  test_call_tree_sfc_varnce.py  (+18 more)
src/: .rain.F.swp  AiryFunction.f90  CMakeLists.txt  G_unit_tests.F90  KK_integrals_tests.F90  KK_microphys_module.F90  Make-ketley-parallel.bash  Makefile  Nc_Ncn_test.F90  Parabolic.f90  Parabolic_constants.f90  advance_microphys_module.F90  amebsa.f90  amoeba.f90  array_index.F  array_index.F90  arrays.F  autoconv_driver.F  banbks.F  bandec.F  budget_terms.F  budget_terms.F90  bugsrad_driver.F90  calendar.F  calendar.F90  closure_new.F  clubb_driver.F90  clubb_driver_test.F90  clubb_inputfields.F90  clubb_loss_driver.F90  clubb_loss_driver_test.F90  clubb_model_settings.F90  clubb_standalone.F90  clubb_standalone_loss.F90  clubb_thread_test.F90  clubb_tuner.F90  coamps_micro_driver.F90  coamps_micro_driver_module.F90  coamps_microphys_driver_module.F90  compare_runs.F  (+150 more)
src/BUGSrad/: CMakeLists.txt  bandsolve.F  bugs_lwr.F  bugs_rad.F  bugs_swr.F  bugsrad_hoc.F90  bugsrad_planck.F90  cloud_correlate.F90  cloudg.F  comscp2.F  driver_read.F  gascon.F  gases_ckd.F90  kinds.F90  newexp.F90  rayle.F  two_rt_lw.F  two_rt_lw_bs.F  two_rt_lw_ocastrndm.F90  two_rt_lw_sel.F  two_rt_sw.F  two_rt_sw_bs.F  two_rt_sw_iter.F  two_rt_sw_ocastrndm.F90
src/Benchmark_cases/: CMakeLists.txt  README  arm.F90  arm_0003.F90  arm_3year.F90  arm_97.F90  astex.F90  astex_a209.F90  atex.F90  atex_long.F90  bomex.F90  clex9_oct14.F90  cloud_feedback.F90  cloud_rad.F90  cloud_rad_module.F90  cloud_sed_mod.F90  cloud_sed_module.F90  cobra.F90  diag_ustar.F90  diag_ustar_module.F90  dycoms2_rf01.F90  dycoms2_rf02.F90  ekman.F90  fire.F90  gabls2.F90  gabls3.F90  gabls3_night.F90  jun25.F90  lba.F90  mpace_a.F90  mpace_b.F90  neutral_case.F90  nov11.F90  prescribe_forcings.F90  rad_lwsw.F90  rad_lwsw_module.F90  rico.F90  sfc_flux.F90  spec_hum_to_mixing_ratio.F90  surface_flux.F90  (+3 more)
src/CLUBB_core/: CMakeLists.txt  FileForTestingUpdateScript.txt  KK_microphys_module.F90  LY93_pdf.F90  Nc_Ncn_eqns.F90  PDF_utilities.F90  Parabolic.f90  Skw_func.F90  Skw_module.F90  Skx_module.F90  T_in_K_mod.F90  T_in_K_module.F90  adg1_adg2_3d_luhar_pdf.F90  advance_clubb_core_module.F90  advance_helper_module.F90  advance_windm_edsclrm_module.F90  advance_wp2_wp3_mod.F90  advance_wp2_wp3_module.F90  advance_xm_wpxp_module.F90  advance_xp2_xpyp_module.F90  advance_xp3_module.F90  anl_erf.F90  array_index.F90  async.py  calc_pressure.F90  calc_roots.F90  calendar.F90  clip_explicit.F90  clip_semi_implicit.F90  clubb_api_module.F90  clubb_core.F90  clubb_precision.F90  code_timer_module.F90  constants.F90  constants_clubb.F90  constants_clubb.F90_save  corr_matrix_module.F90  corr_varnce_module.F90  csr_matrix_class_3array.F90  csr_matrix_module.F90  (+107 more)
(+3427 files in other folders)
