set(LAPACK_DOUBLE_SOURCES
                            dasum.f
                            daxpy.f
                            dcopy.f
                            ddot.f
                            dgbcon.f
                            dgbequ.f
                            dgbmv.f
                            dgbrfs.f
                            dgbsv.f
                            dgbsvx.f
                            dgbtf2.f
                            dgbtrf.f
                            dgbtrs.f
                            dgemm.f
                            dgemv.f
                            dger.f
                            dgtcon.f
                            dgtrfs.f
                            dgtsv.f
                            dgtsvx.f
                            dgttrf.f
                            dgttrs.f
                            dgtts2.f
                            disnan.f
                            dlabad.f
                            dlacn2.f
                            dlacpy.f
                            dlae2.f
                            dlaev2.f
                            dlagtm.f
                            dlaisnan.f
                            dlamch.f
                            dlangb.f
                            dlangt.f
                            dlanst.f
                            dlansy.f
                            dlantb.f
                            dlapy2.f
                            dlaqgb.f
                            dlaqsy.f
                            dlarfb.f
                            dlarf.f
                            dlarfg.f
                            dlarft.f
                            dlartg.f
                            dlascl.f
                            dlaset.f
                            dlasr.f
                            dlasrt.f
                            dlassq.f
                            dlaswp.f
                            dlatbs.f
                            dlatrd.f
                            dnrm2.f
                            dorg2l.f
                            dorg2r.f
                            dorgql.f
                            dorgqr.f
                            dorgtr.f
                            dpoequ.f
                            dpotrf2.f
                            dpotrf.f
                            drscl.f
                            dscal.f
                            dsteqr.f
                            dsterf.f
                            dswap.f
                            dsyev.f
                            dsymv.f
                            dsyr2.f
                            dsyr2k.f
                            dsyrk.f
                            dsytd2.f
                            dsytrd.f
                            dtbsv.f
                            dtrmm.f
                            dtrmv.f
                            dtrsm.f
                            idamax.f
                            ieeeck.f
                            iladlc.f
                            iladlr.f
                            ilaenv.f
                            iparmq.f
)

add_library(clubb_lapack_double OBJECT ${LAPACK_DOUBLE_SOURCES})
add_compile_options(fpp)
